@startuml

hide methods
hide stereotypes
skinparam linetype ortho

entity "dim_date" as dim_date {
  * id_date : INT <<PK>>
  --
  fecha : DATE
  anio : INT
  trimestre : INT
  mes : INT
  nombre_mes : VARCHAR(20)
}

entity "dim_sistema" as dim_sistema {
  * id_sistema : INT <<PK>>
  --
  nombre_sistema : VARCHAR(100)
  tipo_sistema : VARCHAR(100)
  pais : VARCHAR(100)
}

entity "dim_tecnologia" as dim_tecnologia {
  * id_tecnologia : INT <<PK>>
  --
  tecnologia : VARCHAR(100)
  categoria_tecnologia : VARCHAR(100)
  tipo_recurso : VARCHAR(100)
  es_renovable : BOOLEAN
}

entity "dim_region" as dim_region {
  * id_region : INT <<PK>>
  --
  pais : VARCHAR(100)
  zona_geografica : VARCHAR(100)
  region : VARCHAR(100)
}

entity "fact_capacidad_instalada" as fact_capacidad {
  * id_capacidad : INT <<PK>>
  --
  * id_date : INT <<FK>>
  * id_sistema : INT <<FK>>
  * id_tecnologia : INT <<FK>>
  * id_region : INT <<FK>>
  nivel_geografico : VARCHAR(20)
  capacidad_instalada_mw : DECIMAL(20,6)
}

dim_date ||--o{ fact_capacidad
dim_sistema ||--o{ fact_capacidad
dim_tecnologia ||--o{ fact_capacidad
dim_region ||--o{ fact_capacidad

@enduml
